--- a/app/views/student/dashboard.html.erb
+++ b/app/views/student/dashboard.html.erb
@@ -108,7 +108,8 @@
                 <ion-row>
                     <ion-col>
                         <ion-list class="side_list" class="ion-no-padding" style="margin-top: 20px; margin-left: 15px; margin-right: 15px">
-                            <ion-item lines='none' class="side_tabs" onClick="viewOption(event,'profile'); post('/studentprofile','student_profile[student_id]=<%= @student.id %>',(data)=>{onGetProfile(data,'profile_content',false)})" id="defaultOpen">
+                            <ion-item lines='none' class="side_tabs" onClick="viewOption(event,'profile');
+                            document.getElementById('profile_content').innerHTML='<ion-spinner></ion-spinner>'; post('/studentprofile','student_profile[student_id]=<%= @student.id %>',(data)=>{onGetProfile(data,'profile_content',false)})" id="defaultOpen">
                                 <div style="height: 57px;">
                                     <a>
                                         <ion-icon name="person-outline" class="side_icons"></ion-icon>
@@ -116,7 +117,7 @@
                                     </a>
                                 </div>
                             </ion-item>
-                            <ion-item lines='none' class="side_tabs" onClick="post('/extradata','extra_list[student_id]=<%= session[:id] %>',(data)=>{onGetExtraList(data,'extras')}); viewOption(event,'extra')">
+                            <ion-item lines='none' class="side_tabs" onClick="document.getElementById('extras').innerHTML='<ion-spinner></ion-spinner>';viewOption(event,'extra'); post('/extradata','extra_list[student_id]=<%= session[:id] %>',(data)=>{onGetExtraList(data,'extras')}); ">
                                 <div style="height: 57px;">
                                     <a>
                                         <ion-icon name="beer-outline" class="side_icons"></ion-icon>
@@ -124,7 +125,8 @@
                                     </a>
                                 </div>
                             </ion-item>
-                            <ion-item lines='none' class="side_tabs" onClick="post('/guestdata','guest_list[student_id]=<%= session[:id] %>',(data)=>{onGetGuestList(data,'guestss')}); viewOption(event,'guests')">
+                            <ion-item lines='none' class="side_tabs" onClick="document.getElementById('extras').innerHTML='<ion-spinner></ion-spinner>';  
+                            viewOption(event,'guests'); post('/guestdata','guest_list[student_id]=<%= session[:id] %>',(data)=>{onGetGuestList(data,'guestss')});">
                                 <div style="height: 57px;">
                                     <a>
                                         <ion-icon name="people-outline" class="side_icons"></ion-icon>
