--- a/app/views/mess/dashboard.html.erb
+++ b/app/views/mess/dashboard.html.erb
@@ -188,7 +188,7 @@ display: none !important;
             <ion-col class="ion-no-padding" size='2.035' style="background-color: #8f15f4;">
                 <ion-row style="height: 63px">
                     <ion-col style="border-bottom: 1px solid rgba(255, 255, 255, 0.2)">
-                        <label style="position: relative; left: 45px; top: 20px; weight: 500; font-weight: 400; font-size: 18px; color: white;">MESS DASHBOARD <%= session[:id] %></label>
+                        <label style="position: relative; left: 45px; top: 20px; weight: 500; font-weight: 400; font-size: 18px; color: white;">MESS DASHBOARD</label>
                     </ion-col>
                 </ion-row>
                 <ion-row>
@@ -250,7 +250,7 @@ display: none !important;
 
             </ion-col>
             <ion-col>
-                <ion-row style="height: 63px; border-bottom: 1px solid rgba(0, 0, 0, 0.2)">
+                <ion-row style="height: 63px; border-bottom: 1px solid rgba(0, 0, 0, 0.2);">
                     <ion-col size='3'>
                         <label style="position: relative; left: 300px; top: 20px; weight: 500; font-weight: 400; font-size: 19px; color: grey">MESS MANAGEMENT</label>
                     </ion-col>
